# homework_20.1-2-

./: data.json  data_category.json  data_product.json  pyproject.toml
blog/: admin.py  models.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_form.html  blog_list.html
config/: settings.py  urls.py
main/: admin.py  forms.py  models.py  services.py  urls.py  utils.py  views.py
main/management/commands/: fill.py
main/migrations/: 0001_initial.py  0002_blog_contact_alter_product_name_version.py  0002_contact.py  0003_product_author.py  0004_alter_product_author.py  0005_alter_product_author_alter_product_category.py  0006_delete_blog.py  0007_product_is_published.py  0008_alter_product_options.py
main/templates/main/: 403.html  base.html  blog_list.html  categories.html  contacts.html  index.html  new_product_form.html  product.html  product_confirm_delete.html  product_update.html
main/templatetags/: my_tags.py
users/: forms.py  models.py  signals.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
users/templates/email/: verification_email.txt
users/templates/users/: email_activated.html  login.html  register.html  restore_password.html  user_form.html
