[tool.poetry]
name = "homework-20-1-2-"
version = "0.1.0"
description = ""
authors = ["Oleg Usachev <usaechv97@mail.ru>"]
readme = "README.md"
packages = [{include = "homework_20"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.7"
pytils = "^0.4.1"
signals = "^0.0.2"
redis = "^5.0.1"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
